[package]
name = "sunrise-swap-adaptor"
version = "1.0.0"
authors = []
edition = "2018"
description = "Null"
license = "MIT"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib

[dependencies]
cosmwasm-std = { version = "2.1.0", features = ["stargate"] }
cosmwasm-schema = "1.3.1"
thiserror = "1.0"
cw-storage-plus =  "1.1.0"
cw-utils = "1.0.1"
serde-json-wasm = "0.5.1"
