[package]
name = "sunrise-swap-adaptor-neutron"
version = "1.0.0"
authors = []
edition = "2018"
description = "Null"
license = "MIT"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib

[dependencies]
cosmwasm-std = { version = "2.1.0", features = ["stargate"] }
cosmwasm-schema = "2.1.0"
schemars = "0.8.10"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
thiserror = "1.0"
ethabi = { version = "18.0.0", default-features = false, features = [] }
cw-storage-plus =  "2.0.0"
cw-utils = "2.0.0"
serde-json-wasm = "1.0.1"
neutron-sdk = "0.11.0"
